# TMS_lessons

./: .gitignore  main.py
Lesson 18 Flask/: .gitignore  crud.py  main.py  models.py  pyproject.toml  requirements.txt
Lesson 19 Flask/: crud.py  main.py  models.py  pyproject.toml
Lesson 39 aiohttp & alembic/: pyproject.toml
Lesson 39 fastapi/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
Lesson 39 fastapi/app/: models.py
Lesson 39 fastapi/app/handlers/: auth.py  posts.py
Lesson 39 fastapi/app/schemas/: auth.py  posts.py
Lesson 39 fastapi/app/services/: auth.py
Lesson 39 fastapi/migrations/: env.py
Lesson 39 fastapi/migrations/versions/: 8c59f1ec7c34_0001_init.py
Lesson20_Django/: manage.py  pyproject.toml
Lesson21_Django/: manage.py  pyproject.toml
Lesson21_Django/Lesson21_Django/: asgi.py  settings.py  urls.py  wsgi.py
Lesson21_Django/posts/: views.py
Lesson21_Django/templates/: create_form.html  home.html  note.html
Lesson22_Django_posts/: pyproject.toml
Lesson23_Django_models1/: .gitignore  createFakeData.py  pyproject.toml
Lesson23_Django_models1/posts/: admin.py  models.py  service.py  views.py
Lesson23_Django_models1/posts/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_note_image.py  0004_alter_note_image_note_created_at_index.py  0005_tag_note_tags.py  0006_alter_note_content_alter_note_image_alter_note_tags_and_more.py
Lesson23_Django_models1/project/: asgi.py  settings.py  urls.py  wsgi.py
Lesson23_Django_models1/static/css/: main.css
Lesson23_Django_models1/templates/: create_form.html  menu.html  note.html  posts-list.html
Lesson23_Django_models1/templates/registration/: register.html
Lesson_37/: async_example.py  client_tcp.py  pyproject.toml  server_tcp.py  server_tcp_with_select.py
Lesson_38/: main.py  pyproject.toml
Lesson_41/: pyproject.toml
food/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  run.sh
food/app/: admin.py  apps.py  cache.py  favorite_service.py  forms.py  models.py  tasks.py  urls.py  views.py
food/app/api/: permissions.py  serializers.py  urls.py  views.py
food/app/api/swagger/: schemas.py
food/app/migrations/: 0003_alter_recipe_category_alter_recipe_description_and_more.py
food/app/templatetags/: media_storages.py
food/app/tests/: extra.py  test_api.py  test_cache.py  test_views.py
food/avatar/: Dockerfile  avatar.py  requirements.txt
food/compose/: .compose.env  .env  prometheus.yaml
food/compose/nginx/: default.conf  minio.conf
food/food/: celery.py  settings.py  swagger.py  urls.py
food/templates/: home.html  menu.html  recipes-list.html  welcome.html
food/templates/recipe/: category.html  create-form.html  favorite.html  recipe.html  recipes-list.html  update-form.html
food/templates/registration/: register-form.html
food/users/: admin.py  email.py  forms.py  models.py  tasks.py  urls.py  views.py
food/users/api/: views.py
food/users/api/swagger/: schemas.py  serializers.py
food/users/migrations/: 0002_user_tg_id.py  0003_alter_user_tg_id.py
lesson10/: circle.py  obj-init.py  obj-methods.py  obj.py  person-super.py  person.py  persons-over.py  persons-poly.py
lesson11/: circle-classmethod.py  circle-getter-setter.py  circle-magic.py  circle-prop.py  circle-staticmethod.py  circle.py
lesson12/: custom_exc.py  custom_exc2.py  data_structures.py  errors_.py  person_validators.py  storages.py
lesson13/: build_in_iterators.py  custom_iter.py  file_opener.py  generators.py  iter_obj.py  os_dir.py
lesson13a/: __init__.py  abstract.py  storages.py  types.py
lesson14 SQL/: test.sql
lesson15 ORM/: test_db.py
lesson3/: lesson3-combo.py  lesson3-starred.py  lesson3-types.py  lesson3.py
lesson4/: lesson 4 - convert.py  lesson 4 None.py  lesson 4 bool.py
lesson5/: f-string.py  if_else-numbers.py  if_else.py  if_else2.py  if_else3.py  str-format.py  while.py
lesson6/: for.py  for2.py  func1.py  func2.py  functions.py
lesson7/: big_func.py  func_args.py  func_kwargs.py  Декоратор функции создания пользователя.py  (+2 more)
lesson8/: decorators.py  (+5 more)
tg_bot/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
tg_bot/app/: models.py  settings.py
tg_bot/app/handlers/: misc.py  recipes.py  welcome.py
(+36 files in other folders)
