[tool.poetry]
name = "lesson21-django"
version = "0.1.0"
description = ""
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
django-ckeditor = "^6.7.0"
django-ckeditor-5 = "^0.2.11"


[tool.poetry.group.dev.dependencies]
faker = "^21.0.0"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
